--- a/myself.html
+++ b/myself.html
@@ -4,10 +4,10 @@
     <title>Personal Details </title>
 </head>
 <body>
-   <h2 align="center" style="color: darkorange;" >Personal Profile</h2>
+   <h2 align="center" style="color: rgb(90, 118, 193);" >Personal Profile</h2>
   <hr>
     <h1 align="center"><img src="./photo.jpg" alt="" style="width: 150px; border: 2px solid #e12323; border-radius: 10px;"></h1>
-    <h2 align="center" style="color: darkorange;">ASHISH KUMAR LUCKY </h2>
+    <h2 align="center" style="color: rgb(90, 118, 193);">ASHISH KUMAR LUCKY </h2>
     <hr>
     <div><p> <b>Hello! I'm Ashish Kumar Lucky. I am from Muzaffarpur,Bihar.I secure 8.8 CGPA in 10<sup>th</sup> standard,  63.2 % in 12<sup>th</sup> standard. I had completed by bachelor's degree in Computer Science and Engineering from Motihari College of Engineering, Motihari where I secure 7.68 CGPA. My technical skills is SQL, HTML, MACHINE LEARNING and Programming in PYTHON. I also used my technical skills in my final year project which is Brain Tumor Classification using Machine Learning, <ul>
         <li><strong>In This Project:</strong></li>
