--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table  cellspacing="0" cellpadding="10">
         <tr>
             <td rowspan="5"><img src=".//photo.jpg" alt="" style="width: 175px; border: 2px solid rgb(92, 82, 174); border-radius: 35px;"></td>
-            <td rowspan="5"><h1 style="color: rgb(90, 118, 193);" >ASHISH KUMAR LUCKY </h1> <p><em>Upcoming S.D.E</em></p></td>
+            <td rowspan="5"><h1 style="color: rgb(90, 118, 193);" >ASHISH KUMAR LUCKY </h1> <p><em></em></p></td>
             <td></td>
             <td></td>
             <td></td>
